コミュニティの人数ランキングも作成

--- a/app/views/ranking/_user.html.erb
+++ b/app/views/ranking/_user.html.erb
@@ -9,7 +9,7 @@
           @<%= user.userid %>
         </p>
       </div>
-      <p><%= rank_count(user, title) %></p>
+      <p><%= rank_count(user, nil, title) %></p>
     </div>
   </div>
 <% end %>
