ヘッダーに追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,6 +76,11 @@
                   <% end %>
                 </li>
                 <li>
+                  <%= link_to ranking_index_path, class: "link" do %>
+                    <span class="link nav-link">ランキング</span>
+                  <% end %>
+                </li>
+                <li>
                   <%= link_to setting_path, class: "link" do %>
                     <span class="link nav-link">設定</span>
                   <% end %>
