設定のルーティングを作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,7 +81,7 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to setting_path, class: "link" do %>
+                  <%= link_to settings_path, class: "link" do %>
                     <span class="link nav-link">設定</span>
                   <% end %>
                 </li>
