例のページを一部修正

--- a/app/views/pages/tutorial.html.erb
+++ b/app/views/pages/tutorial.html.erb
@@ -1,38 +1,63 @@
-<h2 class="label" style="color:deeppink">Amicaへようこそ</h2>
-<div id="carouselExampleIndicators" class="carousel carousel-dark slide position-absolute top-50 start-50 translate-middle mt-3" data-bs-ride="carousel" data-bs-interval="false">
+<h2 class="label text-center mb-2" style="color:deeppink">Amicaへようこそ!</h2>
+<p class="label text-center mb-2">Amicaは自分の趣味や好きなこと、興味あることで他人を見つけることに特化した友達探しツールです！<br/>このチュートリアルを見てAmicaの使い方をマスターしましょう！
+</p>
 
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active" style="width: 1300px;">
-      <h5 class="text-center">マイページからタグを追加しよう！</h5>
-      <%= image_tag("tutorial1.png", class: "w-100") %>
-    </div>
-    <div class="carousel-item" style="width: 1300px;">
-      <h5 class="text-center">おすすめユーザーをフォローしよう！</h5>
-      <%= image_tag("tutorial2.png", class: "w-100") %>
-      <div class="carousel-caption d-none d-md-block">
+<div class="d-none d-lg-block d-xl-block d-xxl-block">
+  <div class="container">
+    <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
       </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <%= image_tag("tutorial1.png", class: "d-block w-100") %>
+          <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255,255,255,.6)">
+            <h5 style="color: #000">Step1</h5>
+            <p style="color: #000">マイページの編集からタグを追加しよう！タグは自分の趣味や興味のあることを入力しましょう！</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <%= image_tag("tutorial2.png", class: "d-block w-100") %>
+          <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255,255,255,.6)">
+            <h5 style="color: #000">Step2</h5>
+            <p style="color: #000">あなたの趣味やに一致するおすすめユーザーをフォローしよう！</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <%= image_tag("tutorial3.png", class: "d-block w-100") %>
+          <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255,255,255,.6)">
+            <h5 style="color: #000">Step3</h5>
+            <p style="color: #000">タイムラインを投稿してみんなとその日の出来事を共有しよう</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <%= image_tag("tutorial4.png", class: "d-block w-100") %>
+          <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255,255,255,.6)">
+            <h5 style="color: #000">Step4</h5>
+            <p style="color: #000">コミュニティに参加して自分のことを知ってもらおう！</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <div class="carousel-item" style="width: 1300px;">
-      <h5 class="text-center">タイムラインを投稿してみんなとその日の出来事を共有しよう！</h5>
-      <%= image_tag("tutorial3.png", class: "w-100") %>
-    </div>
-    <div class="carousel-item" style="width: 1300px;">
-      <h5 class="text-center">コミュニティに参加して友達の輪を広げよう！</h5>
-      <%= image_tag("tutorial4.png", class: "w-100") %>
+    <div class="text-center mt-4">
+      <div><%= link_to "Amicaの世界へ行く！", pages_path, class: "btn btn-primary w-100" %></div>
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+</div>
+
+<div class="d-block d-lg-none d-xl-none d-xxl-none">
+  <div class="container">
+
+  </div>
 </div>
