例のページをスマホとPCでビジュアルを変更

--- a/app/views/pages/tutorial.html.erb
+++ b/app/views/pages/tutorial.html.erb
@@ -51,13 +51,32 @@
       </button>
     </div>
     <div class="text-center mt-4">
-      <div><%= link_to "Amicaの世界へ行く！", pages_path, class: "btn btn-primary w-100" %></div>
+      <div><%= link_to "さあ！Amicaを使ってみましょう！", pages_path, class: "btn btn-primary w-100" %></div>
     </div>
   </div>
 </div>
 
 <div class="d-block d-lg-none d-xl-none d-xxl-none">
-  <div class="container">
-
+  <div class="container text-center">
+    <hr/>
+    <h5 style="color: #000">Step1</h5>
+    <p style="color: #000">マイページの編集からタグを追加しよう！タグは自分の趣味や興味のあることを入力しましょう！</p>
+    <%= image_tag("tutorial1.png", class: "w-100") %>
+    <hr/>
+    <h5 style="color: #000">Step2</h5>
+    <p style="color: #000">あなたの趣味やに一致するおすすめユーザーをフォローしよう！</p>
+    <%= image_tag("tutorial2.png", class: "w-100") %>
+    <hr/>
+    <h5 style="color: #000">Step3</h5>
+    <p style="color: #000">タイムラインを投稿してみんなとその日の出来事を共有しよう</p>
+    <%= image_tag("tutorial3.png", class: "w-100") %>
+    <hr/>
+    <h5 style="color: #000">Step4</h5>
+    <p style="color: #000">コミュニティに参加して自分のことを知ってもらおう！</p>
+    <%= image_tag("tutorial4.png", class: "w-100") %>
+    <hr/>
+    <div class="text-center mt-4">
+      <div><%= link_to "さあ！Amicaを使ってみましょう！", pages_path, class: "btn btn-primary w-100" %></div>
+    </div>
   </div>
 </div>
