--- a/app/views/pages/tutorial.html.erb
+++ b/app/views/pages/tutorial.html.erb
@@ -16,28 +16,28 @@
           <%= image_tag("tutorial1.png", class: "d-block w-100") %>
           <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255,255,255,.6)">
             <h5 style="color: #000">Step1</h5>
-            <p style="color: #000">マイページの編集からタグを追加しよう！タグは自分の趣味や興味のあることを入力しましょう！</p>
+            <p style="color: #000">マイページの編集からタグを追加しましょう！タグは自分の趣味や興味のあることを入力しましょう！</p>
           </div>
         </div>
         <div class="carousel-item">
           <%= image_tag("tutorial2.png", class: "d-block w-100") %>
           <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255,255,255,.6)">
             <h5 style="color: #000">Step2</h5>
-            <p style="color: #000">あなたの趣味やに一致するおすすめユーザーをフォローしよう！</p>
+            <p style="color: #000">あなたの趣味やに一致するおすすめユーザーをフォローしましょう！</p>
           </div>
         </div>
         <div class="carousel-item">
           <%= image_tag("tutorial3.png", class: "d-block w-100") %>
           <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255,255,255,.6)">
             <h5 style="color: #000">Step3</h5>
-            <p style="color: #000">タイムラインを投稿してみんなとその日の出来事を共有しよう</p>
+            <p style="color: #000">タイムラインを投稿してみんなとその日の出来事を共有しましょう！</p>
           </div>
         </div>
         <div class="carousel-item">
           <%= image_tag("tutorial4.png", class: "d-block w-100") %>
           <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255,255,255,.6)">
             <h5 style="color: #000">Step4</h5>
-            <p style="color: #000">コミュニティに参加して自分のことを知ってもらおう！</p>
+            <p style="color: #000">コミュニティに参加して自分のことを知ってもらいましょう！</p>
           </div>
         </div>
       </div>
@@ -60,19 +60,19 @@
   <div class="container text-center">
     <hr/>
     <h5 style="color: #000">Step1</h5>
-    <p style="color: #000">マイページの編集からタグを追加しよう！タグは自分の趣味や興味のあることを入力しましょう！</p>
+    <p style="color: #000">マイページの編集からタグを追加しましょう！タグは自分の趣味や興味のあることを入力しましょう！</p>
     <%= image_tag("tutorial1.png", class: "w-100") %>
     <hr/>
     <h5 style="color: #000">Step2</h5>
-    <p style="color: #000">あなたの趣味やに一致するおすすめユーザーをフォローしよう！</p>
+    <p style="color: #000">あなたの趣味やに一致するおすすめユーザーをフォローしましょう！</p>
     <%= image_tag("tutorial2.png", class: "w-100") %>
     <hr/>
     <h5 style="color: #000">Step3</h5>
-    <p style="color: #000">タイムラインを投稿してみんなとその日の出来事を共有しよう</p>
+    <p style="color: #000">タイムラインを投稿してみんなとその日の出来事を共有しましょう！</p>
     <%= image_tag("tutorial3.png", class: "w-100") %>
     <hr/>
     <h5 style="color: #000">Step4</h5>
-    <p style="color: #000">コミュニティに参加して自分のことを知ってもらおう！</p>
+    <p style="color: #000">コミュニティに参加して自分のことを知ってもらいましょう！</p>
     <%= image_tag("tutorial4.png", class: "w-100") %>
     <hr/>
     <div class="text-center mt-4">
