--- a/app/views/chats/_chat_message.html.erb
+++ b/app/views/chats/_chat_message.html.erb
@@ -5,8 +5,10 @@
     <div class="col-sm-12 message-main-sender"  style=" position:relative; " >
       <div class="sender my-1 p-1 mt-2" style="max-width: 40%;">
         <div class="messages container p-1">
-          <% if message.image != nil %>
-            <%= image_tag message.decorate.image ,style:"max-width:100%", "data-lity" => "data-lity" %>
+          <% if message.images.attached? %>
+            <% message.images.each do |image| %>
+              <%= image_tag image, style:"max-width:100%", "data-lity" => "data-lity"%> <br>
+            <% end %>
           <% elsif message.file_name != nil %>
             <a href=<%= message.decorate.files %> download="<%= message.file_name%>"><%= message.file_name%></a>
           <% else %>
@@ -51,12 +53,14 @@
   <div class="row message-body">
     <div class="col-sm-12 message-main-receiver" style=" position:relative;">
       <%= link_to profile_path(@user.userid),class:"userLink"  do %>
-        <%= image_tag @user.decorate.images, class: "icon bd-placeholder-img flex-shrink-0 me-2 mt-2 ",style: "float: left;", width: "40px", height: "40px" %>
+        <%= image_tag @user.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 mt-2 ",style: "float: left;", width: "40px", height: "40px" %>
       <% end %>
       <div class="receiver my-1 p-1 mt-2" style="max-width: 40%;" >
         <div class="messages container p-1">
-          <% if message.image != nil %>
-            <%= image_tag message.decorate.image ,style:"max-width:100%", "data-lity" => "data-lity" %>
+          <% if message.images.attached? %>
+            <% message.images.each do |image| %>
+              <%= image_tag image, style:"max-width:100%", "data-lity" => "data-lity"%> <br>
+            <% end %>
           <% elsif message.file_name != nil %>
             <a href=<%= message.decorate.files %> download="<%= message.file_name%>"><%= message.file_name%></a>
           <% else %>
