ヘルプページいったんマスターをマージ。

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -32,7 +32,7 @@
                     <div class="accordion faq-accordian shadow-sm" id="faqAccordion">
                       <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                         <div class="card-header" id="headingTwo">
-                          <h6 data-bs-toggle="collapse" href="#collapseOne" role="button" aria-expanded="false" aria-controls="collapseOne">Q.退会方法がわかりません。<span class="lni-chevron-up"></span>
+                          <h6 data-bs-toggle="collapse" href="#collapseOne" role="button" aria-expanded="false" aria-controls="collapseOne">Q1.退会方法がわかりません。<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
                         <div class="collapse" id="collapseOne" aria-labelledby="headingOne" data-parent="#faqAccordion">
@@ -44,38 +44,112 @@
 
                       <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                         <div class="card-header" id="headingTwo">
-                          <h6 data-bs-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">Q.友達の作り方がわかりません。<span class="lni-chevron-up"></span>
+                          <h6 data-bs-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">Q2.友達の作り方がわかりません。<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
                         <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#faqAccordion">
                           <div class="card-body">
-                            <p>コミュニティ、タイムラインのおすすめからユーザーをフォローしてコミュニケーションを始めよう！</p>
+                            <p>A.友だちを登録していない場合はホームにある「あなたに合った友だちを探してみましょう！」をクリックorタップし友だちを探してみよう。追加で他のユーザーをフォローしたい場合は上のバーにある友達からフォローできます。</p>
                           </div>
                         </div>
                       </div>
 
                       <div class="card border-0 wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
                         <div class="card-header" id="headingThree">
-                          <h6 data-bs-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">Q.バッジに何か効果はありますか？<span class="lni-chevron-up"></span>
+                          <h6 data-bs-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">Q3.コミュニティの作り方がわかりません。<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
                         <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#faqAccordion">
                           <div class="card-body">
-                            <p>A.バッチには特別な効果はありません。バッジはAmicaの一つの遊び要素です。</p>
+                            <p>A.コミュニティを作成または参加していない場合はホームにある「あなたに合ったコミュニティを見つけてみましょう！」をクリックorタップし、コミュニティを新規作成から作成ができます。追加で作成したい場合は上のバーにあるコミュニティから新規作成することができます。</p>
                           </div>
                         </div>
                       </div>
+
                       <div class="card border-0 wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
-                        <div class="card-header" id="headingThree">
-                          <h6 data-bs-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">Q.バッジに何か効果はありますか？<span class="lni-chevron-up"></span>
+                        <div class="card-header" id="headingFour">
+                          <h6 data-bs-toggle="collapse" href="#collapseFour" role="button" aria-expanded="false" aria-controls="collapseFour">Q4.友だちやコミュニティとチャットしたいとき。<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
-                        <div class="collapse" id="collapseFour" aria-labelledby="headingThree" data-parent="#faqAccordion">
+                        <div class="collapse" id="collapseFour" aria-labelledby="headingFour" data-parent="#faqAccordion">
+                          <div class="card-body">
+                            <p>A.ホームに追加されている友だちのバナーをクリックorタップすると、友だちのプロフィールページに移動します。そして右上にあるチャットをクリックorタップすることでチャットすることができます。コミュニティチャットは上段にあるコミュニティをクリックorタップし、チャットしたいコミュニティグループのバナーを開くことでチャットすることができます。</p>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
+                        <div class="card-header" id="headingFive">
+                          <h6 data-bs-toggle="collapse" href="#collapseFive" role="button" aria-expanded="false" aria-controls="collapseFive">Q5.通知に表示される内容は？<span class="lni-chevron-up"></span>
+                          </h6>
+                        </div>
+                        <div class="collapse" id="collapseFive" aria-labelledby="headingFive" data-parent="#faqAccordion">
+                          <div class="card-body">
+                            <p>A.通知には相手からフォローされた場合、タイムラインの自分の投稿にコメントされた場合、またはいいねされたとき、またチャットが自分あてに届いた場合と自分が参加しているコミュニティのチャットなどを通知に表示します。</p>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                        <div class="card-header" id="headingSix">
+                          <h6 data-bs-toggle="collapse" href="#collapseSix" role="button" aria-expanded="false" aria-controls="collapseSix">Q6.パスワードの変更方法がわかりません。<span class="lni-chevron-up"></span>
+                          </h6>
+                        </div>
+                        <div class="collapse" id="collapseSix" aria-labelledby="headingSix" data-parent="#faqAccordion">
+                          <div class="card-body">
+                            <p>A.「その他」→「設定」→「ユーザー情報を編集」→から新しいパスワードを入力した後に現在のパスワードを入力→「変更」を押すと変更できます。</p>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                        <div class="card-header" id="headingSeven">
+                          <h6 data-bs-toggle="collapse" href="#collapseSeven" role="button" aria-expanded="false" aria-controls="collapseSeven">Q7.タイムラインの機能について<span class="lni-chevron-up"></span>
+                          </h6>
+                        </div>
+                        <div class="collapse" id="collapseSeven" aria-labelledby="headingSeven" data-parent="#faqAccordion">
+                          <div class="card-body">
+                            <p>A.タイムラインでは自分が今何しているのかを追加している友だち全員にチャットや画像を通して共有することができます。また友だちの投稿も見ることができ、何をしているのかリアルタイムで確認できます。</p>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                        <div class="card-header" id="headingSix">
+                          <h6 data-bs-toggle="collapse" href="#collapseEight" role="button" aria-expanded="false" aria-controls="collapseEight">Q8.ログアウト、ログインについて。<span class="lni-chevron-up"></span>
+                          </h6>
+                        </div>
+                        <div class="collapse" id="collapseEight" aria-labelledby="headingEight" data-parent="#faqAccordion">
+                          <div class="card-body">
+                            <p>A.右上にある「ログアウト」からログアウトすることができます。また複数のデバイスでAmicaを使用したい場合は、初回時の起動した際に表示される「ログイン」→使用しているメールアドレスとパスワードを入力することでログインすることができます。</p>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                        <div class="card-header" id="headingNine">
+                          <h6 data-bs-toggle="collapse" href="#collapseNine" role="button" aria-expanded="false" aria-controls="collapseNine">Q9.パスワードの変更方法がわかりません。<span class="lni-chevron-up"></span>
+                          </h6>
+                        </div>
+                        <div class="collapse" id="collapseNine" aria-labelledby="headingNine" data-parent="#faqAccordion">
+                          <div class="card-body">
+                            <p>A.「その他」→「設定」→「ユーザー情報を編集」→から新しいパスワードを入力した後に現在のパスワードを入力→「変更」を押すと変更できます。</p>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                        <div class="card-header" id="headingTen">
+                          <h6 data-bs-toggle="collapse" href="#collapseTen" role="button" aria-expanded="false" aria-controls="collapseTen">Q10.バッジに何か効果はありますか？<span class="lni-chevron-up"></span>
+                          </h6>
+                        </div>
+                        <div class="collapse" id="collapseTen" aria-labelledby="headingTen" data-parent="#faqAccordion">
                           <div class="card-body">
                             <p>A.バッチには特別な効果はありません。バッジはAmicaの一つの遊び要素です。</p>
                           </div>
                         </div>
                       </div>
+
                     </div>
                     <div class="mt-5   mar-btm">
                       <h4 class="text-thin"><i class="fa fa-question-circle fa-lg fa-fw text-primary "></i> 問題は解決されましたか？
