--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -128,12 +128,12 @@
 
                       <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                         <div class="card-header" id="headingNine">
-                          <h6 data-bs-toggle="collapse" href="#collapseNine" role="button" aria-expanded="false" aria-controls="collapseNine">Q9.パスワードの変更方法がわかりません。<span class="lni-chevron-up"></span>
+                          <h6 data-bs-toggle="collapse" href="#collapseNine" role="button" aria-expanded="false" aria-controls="collapseNine">Q9.ランキング機能とは<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
                         <div class="collapse" id="collapseNine" aria-labelledby="headingNine" data-parent="#faqAccordion">
                           <div class="card-body">
-                            <p>A.「その他」→「設定」→「ユーザー情報を編集」→から新しいパスワードを入力した後に現在のパスワードを入力→「変更」を押すと変更できます。</p>
+                            <p>A.「その他」→「ランキング」から各ユーザーのランキングやコミュニティのランキングを閲覧することができます。</p>
                           </div>
                         </div>
                       </div>
