--- a/app/views/chats/_chat_message.html.erb
+++ b/app/views/chats/_chat_message.html.erb
@@ -5,10 +5,7 @@
     <div class="col-sm-12 message-main-sender"  style=" position:relative; " >
       <div class="sender my-1 p-1 mt-2" style="max-width: 40%;">
         <div class="messages container p-1">
-          <% if message.images.attached? %>
-            <% message.images.each do |image| %>
-              <%= image_tag image, style:"max-width:100%", "data-lity" => "data-lity"%> <br>
-            <% end %>
+          <% if message.content == '画像を投稿しました。' %>
           <% elsif message.file_name != nil %>
             <a href=<%= message.decorate.files %> download="<%= message.file_name%>"><%= message.file_name%></a>
           <% else %>
