--- a/app/views/chats/_chat_message.html.erb
+++ b/app/views/chats/_chat_message.html.erb
@@ -6,8 +6,19 @@
       <div class="sender my-1 p-1 mt-2" style="max-width: 40%;">
         <div class="messages container p-1">
           <% if message.content == '画像を投稿しました。' %>
-          <% elsif message.file_name != nil %>
-            <a href=<%= message.decorate.files %> download="<%= message.file_name%>"><%= message.file_name%></a>
+            <% image = ActiveStorage::Blob.find_by(filename: message.image) %>
+            <% if image.nil?%>
+              <%=safe_join(message.content.split("\n"),tag(:br))%>
+            <% else %>
+              <%= image_tag image, style:"max-width:100%", "data-lity" => "data-lity"%>
+            <% end %>
+          <% elsif message.content == "#{message.file_name}を送信しました。" %>
+            <% file = ActiveStorage::Blob.find_by(filename: message.file_name) %>
+            <% if file.nil?%>
+              <%=safe_join(message.content.split("\n"),tag(:br))%>
+            <% else %>
+              <a href=<%= message.decorate.files %> download="<%= message.file_name%>"><%= message.file_name%></a>
+            <% end %>
           <% else %>
             <% start = message.content.index("http")%>
             <div>
