おかしかったshadowを削除

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -29,10 +29,10 @@
               <div class="container">
                 <div class="row justify-content-center">
                   <div class="col-12 col-sm-10 col-lg-8">
-                    <div class="accordion faq-accordian shadow-sm" id="faqAccordion">
+                    <div class="accordion faq-accordian" id="faqAccordion">
                       <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                         <div class="card-header" id="headingTwo">
-                          <h6 data-bs-toggle="collapse" href="#collapseOne" role="button" aria-expanded="false" aria-controls="collapseOne">Q1.退会方法がわかりません。<span class="lni-chevron-up"></span>
+                          <h6 class="text-dark" data-bs-toggle="collapse" href="#collapseOne" role="button" aria-expanded="false" aria-controls="collapseOne">Q1.退会方法がわかりません。<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
                         <div class="collapse" id="collapseOne" aria-labelledby="headingOne" data-parent="#faqAccordion">
@@ -44,7 +44,7 @@
 
                       <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                         <div class="card-header" id="headingTwo">
-                          <h6 data-bs-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">Q2.友達の作り方がわかりません。<span class="lni-chevron-up"></span>
+                          <h6 class="text-dark" data-bs-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">Q2.友達の作り方がわかりません。<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
                         <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#faqAccordion">
@@ -56,7 +56,7 @@
 
                       <div class="card border-0 wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
                         <div class="card-header" id="headingThree">
-                          <h6 data-bs-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">Q3.コミュニティの作り方がわかりません。<span class="lni-chevron-up"></span>
+                          <h6 class="text-dark" data-bs-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">Q3.コミュニティの作り方がわかりません。<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
                         <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#faqAccordion">
@@ -68,7 +68,7 @@
 
                       <div class="card border-0 wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
                         <div class="card-header" id="headingFour">
-                          <h6 data-bs-toggle="collapse" href="#collapseFour" role="button" aria-expanded="false" aria-controls="collapseFour">Q4.友だちやコミュニティとチャットしたいとき。<span class="lni-chevron-up"></span>
+                          <h6 class="text-dark" data-bs-toggle="collapse" href="#collapseFour" role="button" aria-expanded="false" aria-controls="collapseFour">Q4.友だちやコミュニティとチャットしたいとき。<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
                         <div class="collapse" id="collapseFour" aria-labelledby="headingFour" data-parent="#faqAccordion">
@@ -80,7 +80,7 @@
 
                       <div class="card border-0 wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
                         <div class="card-header" id="headingFive">
-                          <h6 data-bs-toggle="collapse" href="#collapseFive" role="button" aria-expanded="false" aria-controls="collapseFive">Q5.通知に表示される内容は？<span class="lni-chevron-up"></span>
+                          <h6 class="text-dark" data-bs-toggle="collapse" href="#collapseFive" role="button" aria-expanded="false" aria-controls="collapseFive">Q5.通知に表示される内容は？<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
                         <div class="collapse" id="collapseFive" aria-labelledby="headingFive" data-parent="#faqAccordion">
@@ -90,9 +90,9 @@
                         </div>
                       </div>
 
-                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                         <div class="card-header" id="headingSix">
-                          <h6 data-bs-toggle="collapse" href="#collapseSix" role="button" aria-expanded="false" aria-controls="collapseSix">Q6.パスワードの変更方法がわかりません。<span class="lni-chevron-up"></span>
+                          <h6 class="text-dark" data-bs-toggle="collapse" href="#collapseSix" role="button" aria-expanded="false" aria-controls="collapseSix">Q6.パスワードの変更方法がわかりません。<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
                         <div class="collapse" id="collapseSix" aria-labelledby="headingSix" data-parent="#faqAccordion">
@@ -102,9 +102,9 @@
                         </div>
                       </div>
 
-                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                         <div class="card-header" id="headingSeven">
-                          <h6 data-bs-toggle="collapse" href="#collapseSeven" role="button" aria-expanded="false" aria-controls="collapseSeven">Q7.タイムラインの機能について<span class="lni-chevron-up"></span>
+                          <h6 class="text-dark" data-bs-toggle="collapse" href="#collapseSeven" role="button" aria-expanded="false" aria-controls="collapseSeven">Q7.タイムラインの機能について<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
                         <div class="collapse" id="collapseSeven" aria-labelledby="headingSeven" data-parent="#faqAccordion">
@@ -114,9 +114,9 @@
                         </div>
                       </div>
 
-                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                         <div class="card-header" id="headingSix">
-                          <h6 data-bs-toggle="collapse" href="#collapseEight" role="button" aria-expanded="false" aria-controls="collapseEight">Q8.ログアウト、ログインについて。<span class="lni-chevron-up"></span>
+                          <h6 class="text-dark" data-bs-toggle="collapse" href="#collapseEight" role="button" aria-expanded="false" aria-controls="collapseEight">Q8.ログアウト、ログインについて。<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
                         <div class="collapse" id="collapseEight" aria-labelledby="headingEight" data-parent="#faqAccordion">
@@ -126,9 +126,9 @@
                         </div>
                       </div>
 
-                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                         <div class="card-header" id="headingNine">
-                          <h6 data-bs-toggle="collapse" href="#collapseNine" role="button" aria-expanded="false" aria-controls="collapseNine">Q9.ランキング機能とは<span class="lni-chevron-up"></span>
+                          <h6 class="text-dark" data-bs-toggle="collapse" href="#collapseNine" role="button" aria-expanded="false" aria-controls="collapseNine">Q9.ランキング機能とは<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
                         <div class="collapse" id="collapseNine" aria-labelledby="headingNine" data-parent="#faqAccordion">
@@ -138,20 +138,20 @@
                         </div>
                       </div>
 
-                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                         <div class="card-header" id="headingTen">
-                          <h6 data-bs-toggle="collapse" href="#collapseTen" role="button" aria-expanded="false" aria-controls="collapseTen">Q10.バッジに何か効果はありますか？<span class="lni-chevron-up"></span>
+                          <h6 class="text-dark" data-bs-toggle="collapse" href="#collapseTen" role="button" aria-expanded="false" aria-controls="collapseTen">Q10.バッジに何か効果はありますか？<span class="lni-chevron-up"></span>
                           </h6>
                         </div>
                         <div class="collapse" id="collapseTen" aria-labelledby="headingTen" data-parent="#faqAccordion">
                           <div class="card-body">
-                            <p>A.バッチには特別な効果はありません。バッジはAmicaの一つの遊び要素です。</p>
+                            <p>A.バッジには特別な効果はありませんが、今後なにか追加されるかもしれません。バッジはAmicaの一つの遊び要素です。</p>
                           </div>
                         </div>
                       </div>
 
                     </div>
-                    <div class="mt-5   mar-btm">
+                    <div class="mt-5 mar-btm">
                       <h4 class="text-thin"><i class="fa fa-question-circle fa-lg fa-fw text-primary "></i> 問題は解決されましたか？
                       </h4>
                       <p class="text-muted mar-top ms-3 fs-6">問題が解決されない場合は<%= link_to "お問い合わせ", contact_path %>
